<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A4DCF3"
    tools:context=".Okno_kodu">

    <Button
        android:id="@+id/back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/pasek_szary"
        android:layout_width="80dp"
        android:layout_height="731dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/pasek_kodu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/pasek_biały"
        android:layout_width="334dp"
        android:layout_height="731dp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="80dp"
        android:background="@drawable/pasek_kodu2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/a_r"
        android:includeFontPadding="false"
        android:text="@string/your_code_will_be_shown_here"
        android:textColor="#1c1c1c"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/pasek_szary"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/_1"
        app:layout_constraintEnd_toEndOf="@+id/pasek_szary"
        app:layout_constraintTop_toTopOf="@+id/pasek_szary" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="@+id/pasek_szary"
        app:layout_constraintTop_toBottomOf="@+id/textView12"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/_2"
        app:layout_constraintEnd_toEndOf="@+id/pasek_szary"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="@+id/pasek_szary"
        app:layout_constraintTop_toBottomOf="@+id/textView8"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="203dp"
        app:layout_constraintEnd_toEndOf="@+id/pasek_szary"
        app:layout_constraintTop_toBottomOf="@+id/textView9"/>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="222dp"
        app:layout_constraintEnd_toEndOf="@+id/pasek_szary"
        app:layout_constraintTop_toBottomOf="@+id/textView10"/>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="241dp"
        app:layout_constraintEnd_toEndOf="@+id/pasek_szary"
        app:layout_constraintTop_toBottomOf="@+id/textView11"/>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="298dp"
        app:layout_constraintEnd_toEndOf="@+id/pasek_szary"
        app:layout_constraintTop_toBottomOf="@+id/textView14"/>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="317dp"
        app:layout_constraintEnd_toEndOf="@+id/pasek_szary"
        app:layout_constraintTop_toBottomOf="@+id/textView15"/>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="@+id/pasek_szary"
        app:layout_constraintTop_toBottomOf="@+id/textView13"/>

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="18dp"
        android:text="@string/start_program"
        android:textColor="@color/code"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/pasek_szary" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:text="@string/srednik"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toTopOf="@+id/pasek_szary" />

</androidx.constraintlayout.widget.ConstraintLayout>